--- a/product-delivery-v1/src/main/resources/application-dev.yaml
+++ b/product-delivery-v1/src/main/resources/application-dev.yaml
@@ -9,6 +9,9 @@ configuration:
     pending-orders:
       request:
         endpoint: http://${PENDING_ORDERS_DOMAIN:localhost:8021}/poc/delivery-requests/v1/
+    availability:
+      request:
+        endpoint: http://${AVAILABILITY_DOMAIN:localhost:8021}/poc/delivery-availability/v1/
 
 quarkus:
   rest-client:
@@ -17,4 +20,7 @@ quarkus:
       verify-host: false
     contact-data:
       url: ${configuration.rest-clients.contact-data.request.endpoint}
+      verify-host: false
+    availability:
+      url: ${configuration.rest-clients.availability.request.endpoint}
       verify-host: false
