--- a/mock-service-v1/Dockerfile
+++ b/mock-service-v1/Dockerfile
@@ -6,8 +6,7 @@ ARG gid=1000
 RUN groupadd -g ${gid} ${group} && useradd -u ${uid} -G ${group} -s /bin/sh ${user}
 USER admin:pocgroup
 VOLUME /tmp
-ARG JAR_FILE=target/*.jar
-ADD /${JAR_FILE} app.jar
+ARG JAR_FILE="mock-service-v1-0.0.1-SNAPSHOT.jar"
+ADD target/${JAR_FILE} app.jar
 ENV JAVA_OPTS=""
-EXPOSE 8021
 ENTRYPOINT [ "sh","-c","java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
