--- a/product-delivery-v1/src/main/resources/application-prod.yaml
+++ b/product-delivery-v1/src/main/resources/application-prod.yaml
@@ -5,7 +5,7 @@ configuration:
   rest-clients:
     contact-data:
       request:
-        endpoint: http://${CONTACT_DATA_DOMAIN:localhost:8021}/poc/customer-search/v1/
+        endpoint: ${CONTACT_DATA_ENDPOINT:http://localhost:8082/poc/customer-search/v1/}
         headers:
           provided:
             Content-Type: application/json
@@ -21,7 +21,7 @@ configuration:
 
     pending-orders:
       request:
-        endpoint: http://${PENDING_ORDERS_DOMAIN:localhost:8021}/poc/delivery-requests/v1/
+        endpoint: ${PENDING_ORDERS_ENDPOINT:http://localhost:8082/poc/delivery-requests/v1/}
         headers:
           provided:
             Content-Type: application/json
@@ -37,7 +37,7 @@ configuration:
 
     availability:
       request:
-        endpoint: http://${AVAILABILITY_DOMAIN:localhost:8021}/poc/delivery-availability/v1/
+        endpoint: ${AVAILABILITY_ENDPOINT:http://localhost:8082/poc/delivery-availability/v1/}
         headers:
           provided:
             Content-Type: application/json
@@ -53,7 +53,7 @@ configuration:
 
     reservation:
       request:
-        endpoint: http://${AVAILABILITY_DOMAIN:localhost:8021}/poc/delivery-coordination/v1/
+        endpoint: ${RESERVATION_ENDPOINT:http://localhost:8082/poc/delivery-coordination/v1/}
         headers:
           provided:
             Content-Type: application/json
